--- a/roles/ceph-mds/tasks/non_containerized.yml
+++ b/roles/ceph-mds/tasks/non_containerized.yml
@@ -26,6 +26,7 @@
     creates: /var/lib/ceph/mds/{{ cluster }}-{{ mds_name }}/keyring
   changed_when: false
   when: cephx
+  no_log: "{{ no_log_on_ceph_key_tasks }}"
 
 - name: set mds key permissions
   file:
