--- a/roles/ceph-rbd-mirror/tasks/common.yml
+++ b/roles/ceph-rbd-mirror/tasks/common.yml
@@ -10,6 +10,7 @@
   when:
     - cephx | bool
     - item.copy_key | bool
+  no_log: "{{ no_log_on_ceph_key_tasks }}"
 
 - name: copy ceph key(s) if needed
   copy:
@@ -22,7 +23,7 @@
   when:
     - cephx | bool
     - item.item.copy_key | bool
-  no_log: true
+  no_log: "{{ no_log_on_ceph_key_tasks }}"
 
 - name: create rbd-mirror keyring
   command: >
@@ -43,4 +44,5 @@
     owner: "ceph"
     group: "ceph"
     mode: "{{ ceph_keyring_permissions }}"
+  no_log: "{{ no_log_on_ceph_key_tasks }}"
   when: not containerized_deployment | bool
