--- a/roles/ceph-nfs/tasks/pre_requisite_non_container.yml
+++ b/roles/ceph-nfs/tasks/pre_requisite_non_container.yml
@@ -58,6 +58,7 @@
       when:
         - cephx | bool
         - item.copy_key | bool
+      no_log: "{{ no_log_on_ceph_key_tasks }}"
 
     - name: copy ceph key(s) if needed
       copy:
@@ -70,7 +71,7 @@
       when:
         - cephx | bool
         - item.item.copy_key | bool
-      no_log: true
+      no_log: "{{ no_log_on_ceph_key_tasks }}"
 
     - name: nfs object gateway related tasks
       when: nfs_obj_gw | bool
@@ -80,6 +81,7 @@
           args:
             creates: /var/lib/ceph/radosgw/{{ cluster }}-rgw.{{ ansible_facts['hostname'] }}/keyring
           changed_when: false
+          no_log: "{{ no_log_on_ceph_key_tasks }}"
 
         - name: set rados gateway key permissions
           file:
