--- a/tox.ini
+++ b/tox.ini
@@ -288,6 +288,7 @@ whitelist_externals =
     bash
     pip
     rm
+    sleep
 passenv=*
 sitepackages=False
 setenv=
@@ -380,6 +381,12 @@ commands=
 
   # reboot all vms
   all_daemons,collocation: ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/tests/functional/reboot.yml
+  #all_daemons,collocation: ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/tests/functional/reboot.yml --limit mons
+  #all_daemons: ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/tests/functional/reboot.yml --limit mgrs
+  #all_daemons,collocation: ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/tests/functional/reboot.yml --limit osds
+  #all_daemons,collocation: ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/tests/functional/reboot.yml --limit '!mons:!mgrs:!osds:all'
+  sleep 1m
+  all_daemons,collocation: ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/tests/functional/restart_osds_down.yml
 
   # retest to ensure cluster came back up correctly after rebooting
   all_daemons,collocation: py.test --reruns 20 --reruns-delay 3 -n 8 --durations=0 --sudo -v --connection=ansible --ansible-inventory={changedir}/{env:INVENTORY} --ssh-config={changedir}/vagrant_ssh_config {toxinidir}/tests/functional/tests
