--- a/infrastructure-playbooks/purge-cluster.yml
+++ b/infrastructure-playbooks/purge-cluster.yml
@@ -944,6 +944,8 @@
             - not is_atomic
             - container_binary == 'docker'
           ignore_errors: true
+          tags:
+            - remove_docker
 
         - name: remove docker on debian/ubuntu
           apt:
@@ -952,6 +954,8 @@
             update_cache: yes
             autoremove: yes
           when: ansible_facts['os_family'] == 'Debian'
+          tags:
+            - remove_docker
 
         - name: red hat based systems tasks
           block:
@@ -995,6 +999,8 @@
           when:
             ansible_facts['os_family'] == 'RedHat' and
             not is_atomic
+          tags:
+            - remove_docker
 
         - name: find any service-cid file left
           find:
@@ -1054,6 +1060,8 @@
         - name: remove docker data
           shell: rm -rf /var/lib/docker/*  # noqa 302
           when: not is_atomic | bool
+          tags:
+            - remove_docker
 
 
 - name: purge fetch directory
