--- a/infrastructure-playbooks/rolling_update.yml
+++ b/infrastructure-playbooks/rolling_update.yml
@@ -17,6 +17,7 @@
 - name: confirm whether user really meant to upgrade the cluster
   hosts: localhost
   become: false
+  gather_facts: false
   vars:
     - mgr_group_name: mgrs
 
