--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -552,7 +552,7 @@ dummy:
 ##########
 #ceph_docker_image: "ceph/daemon"
 #ceph_docker_image_tag: latest-octopus
-#ceph_docker_registry: docker.io
+#ceph_docker_registry: quay.io
 #ceph_docker_registry_auth: false
 #ceph_docker_registry_username:
 #ceph_docker_registry_password:
