common: ensure ceph-aliases.sh is absent
For pre-existing cluster where this fail was already deployed we need to
ensure it is removed.
See https://github.com/ceph/ceph-ansible/pull/3447#issue-390617983

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/infrastructure-playbooks/cephadm-adopt.yml
+++ b/infrastructure-playbooks/cephadm-adopt.yml
@@ -82,6 +82,11 @@
         - osd_group_name in group_names
         - osd_objectstore == 'filestore'
 
+    - name: ensure legacy ceph aliases file is absent
+      file:
+        path: /etc/profile.d/ceph-aliases.sh
+        state: absent
+
     - import_role:
         name: ceph-facts
         tasks_from: container_binary.yml
