--- a/infrastructure-playbooks/rolling_update.yml
+++ b/infrastructure-playbooks/rolling_update.yml
@@ -135,6 +135,12 @@
       set_fact:
         rolling_update: true
 
+    - name: ensure legacy ceph aliases file is absent
+      file:
+        path: /etc/profile.d/ceph-aliases.sh
+        state: absent
+
+
 - name: upgrade ceph mon cluster
   vars:
     health_mon_check_retries: 5
