--- a/infrastructure-playbooks/switch-from-non-containerized-to-containerized-ceph-daemons.yml
+++ b/infrastructure-playbooks/switch-from-non-containerized-to-containerized-ceph-daemons.yml
@@ -63,6 +63,11 @@
     - import_role:
         name: ceph-validate
 
+    - name: ensure legacy ceph aliases file is absent
+      file:
+        path: /etc/profile.d/ceph-aliases.sh
+        state: absent
+
 - name: switching from non-containerized to containerized ceph mon
   vars:
     containerized_deployment: true
