dashboard: retry setting rgw-credentials
for some reason, this task can fail in the CI.
Adding a retry can help to avoid this failure.

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>
(cherry picked from commit f8d49827a4194316ada5ff89c41bf4a363f9d3a6)

--- a/roles/ceph-dashboard/tasks/configure_dashboard.yml
+++ b/roles/ceph-dashboard/tasks/configure_dashboard.yml
@@ -267,6 +267,9 @@
         - name: set the rgw credentials
           command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} dashboard set-rgw-credentials"
           changed_when: false
+          register: result
+          until: result is succeeded
+          retries: 5
       rescue:
         - name: create radosgw system user
           radosgw_user:
