tests: remove all references to ceph_stable_release
this is legacy and not needed anymore.

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>
(cherry picked from commit f277a39dfe4ea7ea7d7f211a6a554866ac519f52)

--- a/tox-update.ini
+++ b/tox-update.ini
@@ -30,9 +30,6 @@ setenv=
   non_container: PLAYBOOK = site.yml.sample
 
   CEPH_DOCKER_IMAGE_TAG = latest-luminous
-  UPDATE_CEPH_DOCKER_IMAGE_TAG = latest-nautilus
-  CEPH_STABLE_RELEASE = luminous
-  UPDATE_CEPH_STABLE_RELEASE = nautilus
   ROLLING_UPDATE = True
 
 changedir={toxinidir}/tests/functional/all_daemons{env:CONTAINER_DIR:}
@@ -52,7 +49,7 @@ commands=
   # deploy the cluster
   bash -c 'ANSIBLE_CONFIG={envdir}/tmp/ceph-ansible/ansible.cfg ansible-playbook -vv -i {envdir}/tmp/ceph-ansible/tests/functional/all_daemons{env:CONTAINER_DIR:}/hosts-upgrade-to-nautilus {envdir}/tmp/ceph-ansible/{env:PLAYBOOK:site.yml.sample} --extra-vars "\
       delegate_facts_host={env:DELEGATE_FACTS_HOST:True} \
-      ceph_stable_release={env:CEPH_STABLE_RELEASE:luminous} \
+      ceph_stable_release=luminous \
       ceph_docker_registry={env:CEPH_DOCKER_REGISTRY:quay.ceph.io} \
       ceph_docker_image={env:CEPH_DOCKER_IMAGE:ceph-ci/daemon} \
       ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-luminous} \
@@ -61,12 +58,11 @@ commands=
   pip install -r {toxinidir}/tests/requirements.txt
   ansible-playbook -vv -i {changedir}/hosts {toxinidir}/infrastructure-playbooks/rolling_update.yml --limit 'all:!osd4' --extra-vars "\
       ireallymeanit=yes \
-      ceph_stable_release={env:UPDATE_CEPH_STABLE_RELEASE:nautilus} \
       ceph_docker_registry_auth=True \
       ceph_docker_registry_username={env:DOCKER_HUB_USERNAME} \
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
   "
 
-  bash -c "CEPH_STABLE_RELEASE={env:UPDATE_CEPH_STABLE_RELEASE:nautilus} py.test --reruns 5 --reruns-delay 1 -n 8 --durations=0 --sudo -v --connection=ansible --ansible-inventory={changedir}/hosts --hosts='ansible://osd[!s4]' --ssh-config={changedir}/vagrant_ssh_config {toxinidir}/tests/functional/tests"
+  bash -c "CEPH_STABLE_RELEASE=nautilus py.test --reruns 5 --reruns-delay 1 -n 8 --durations=0 --sudo -v --connection=ansible --ansible-inventory={changedir}/hosts --hosts='ansible://osd[!s4]' --ssh-config={changedir}/vagrant_ssh_config {toxinidir}/tests/functional/tests"
 
   vagrant destroy --force
