tests: ensure ca-certificates is up to date
otherwise the `rpm_key` module fails because it can't verify the
certificate.

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/tests/functional/setup.yml
+++ b/tests/functional/setup.yml
@@ -4,6 +4,7 @@
   become: yes
   tasks:
 
+
     - name: check if it is Atomic host
       stat: path=/run/ostree-booted
       register: stat_ostree
@@ -19,6 +20,14 @@
       package:
         name: net-tools
         state: present
+      register: result
+      until: result is succeeded
+      when: not is_atomic | bool
+
+    - name: ensure ca-certificate is latest version
+      package:
+        name: ca-certificates
+        state: latest
       register: result
       until: result is succeeded
       when: not is_atomic | bool
