tests: ensure ca-certificate is up to date
otherwise, it makes ssl verification fail because of expired
certificates.

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/tests/functional/setup.yml
+++ b/tests/functional/setup.yml
@@ -23,6 +23,14 @@
       when:
         - not is_atomic
 
+    - name: ensure ca-certificate is latest version
+      package:
+        name: ca-certificates
+        state: latest
+      register: result
+      until: result is succeeded
+      when: not is_atomic | bool
+
     - name: disable fastest mirror detection
       ini_file:
         path: /etc/yum/pluginconf.d/fastestmirror.conf
