purge: remove ceph directories on client nodes
Otherwise any ceph directories are left over on client nodes
after the purge.

Closes: https://bugzilla.redhat.com/show_bug.cgi?id=2024815

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>
(cherry picked from commit 20035852a4e51f3800808bc4c71b0e0be86b8132)
(cherry picked from commit 346d4a1e1dc19238020886e3572b296e6b711c70)

--- a/infrastructure-playbooks/purge-cluster.yml
+++ b/infrastructure-playbooks/purge-cluster.yml
@@ -1062,6 +1062,7 @@
     - rbdmirrors
     - nfss
     - mgrs
+    - clients
   gather_facts: false # Already gathered previously
   become: true
   tasks:
