Remove the remaining packages

--- a/infrastructure-playbooks/purge-cluster.yml
+++ b/infrastructure-playbooks/purge-cluster.yml
@@ -742,7 +742,8 @@
           when: containers_list.stdout_lines|length > 0
 
 
-- name: final cleanup - check any running ceph, purge ceph packages, purge config and remove data
+- name: final cleanup - check any running ceph, purge ceph 
+, purge config and remove data
   vars:
     # When set to true both groups of packages are purged.
     # This can cause problem with qemu-kvm
@@ -754,6 +755,7 @@
       - ceph-fuse
       - ceph-mds
       - ceph-mgr
+      - ceph-mgr-modules-core
       - ceph-mon
       - ceph-osd
       - ceph-release
@@ -768,6 +770,7 @@
       - librgw2
       - python3-ceph-argparse
       - python3-cephfs
+      - python3-ceph-common
       - python3-rados
       - python3-rbd
       - python3-rgw
