--- a/infrastructure-playbooks/purge-cluster.yml
+++ b/infrastructure-playbooks/purge-cluster.yml
@@ -742,8 +742,7 @@
           when: containers_list.stdout_lines|length > 0
 
 
-- name: final cleanup - check any running ceph, purge ceph 
-, purge config and remove data
+- name: final cleanup - check any running ceph, purge ceph packages, purge config and remove data
   vars:
     # When set to true both groups of packages are purged.
     # This can cause problem with qemu-kvm
