tests: use centos stream-8 instead of centos 8
CentOS 8 is EOL as of December 2021.
Let's use CentOS stream 8 instead.

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>
(cherry picked from commit bc36f60e8d44986697c5467bf98b2a68bac6efbd)

--- a/tox.ini
+++ b/tox.ini
@@ -333,8 +333,8 @@ setenv=
   # only available for ansible >= 2.5
   ANSIBLE_STDOUT_CALLBACK = yaml
   # Set the vagrant box image to use
-  centos-non_container: CEPH_ANSIBLE_VAGRANT_BOX = centos/8
-  centos-container: CEPH_ANSIBLE_VAGRANT_BOX = centos/8
+  centos-non_container: CEPH_ANSIBLE_VAGRANT_BOX = centos/stream8
+  centos-container: CEPH_ANSIBLE_VAGRANT_BOX = centos/stream8
   ubuntu: CEPH_ANSIBLE_VAGRANT_BOX = guits/ubuntu-bionic64
 
   # Set the ansible inventory host file to be used according to which distrib we are running on
