update: allow qe testing
Enable QE to test upgrade from 4.x to 5.1.

pass `-e qe_testing=true` to get around the upgrade blocking.

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/infrastructure-playbooks/rolling_update.yml
+++ b/infrastructure-playbooks/rolling_update.yml
@@ -34,6 +34,7 @@
     - name: block upgrade for RHCS deployments
       fail:
         msg: "Red Hat Ceph Storage upgrade isn't allowed with this release."
+      when: not qe_testing | default(false) | bool
 
     - name: exit playbook, if user did not mean to upgrade cluster
       fail:
