update: allow qe testing with rgw_multisite
This allows QE testing with rgw multisite enabled.

Closes: https://bugzilla.redhat.com/show_bug.cgi?id=2063702

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/infrastructure-playbooks/rolling_update.yml
+++ b/infrastructure-playbooks/rolling_update.yml
@@ -34,7 +34,9 @@
     - name: block upgrade for RHCS deployments with RGW multisite
       fail:
         msg: "Red Hat Ceph Storage upgrade with RGW multisite deployed isn't allowed with this release."
-      when: rgw_multisite | bool
+      when:
+        - rgw_multisite | bool
+        - not qe_testing | default(False) | bool
 
     - name: exit playbook, if user did not mean to upgrade cluster
       fail:
